fixed spacing

--- a/components/byu-header/byu-header.sass
+++ b/components/byu-header/byu-header.sass
@@ -23,7 +23,7 @@
   font-size: 16px
 
   .constrain
-    padding: 0 5.5em
+    padding: 0 4.8em
 
   .byu-header-el
     z-index: 10
